tests/base/valid/IntMul_Valid_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
    x = 2*3+1
    sys.out.println(Any.toString(x))
