tests/base/invalid/List_CompileFail_3.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
     a2 = [1,2,3]
     y = a2[x]
